# aoc

2023/: CMakeLists.txt  d1p1.cpp  d1p2.cpp  d2p1.cpp  d2p2.cpp  d3p1.cpp  d3p1p2.cpp  d3p2.cpp  day1.cpp  day3.cpp  day4.cpp  day5.cpp  fileio.h  helper.h
2024/: CMakeLists.txt  README.md  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  dayx.cpp
