cmake_minimum_required(VERSION 3.22)

project(advent-of-code)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(day1
    day1.cpp
)

add_executable(day2
    day2.cpp
)

add_executable(day3
    day3.cpp
)

add_executable(day4
    day4.cpp
)

add_executable(day5
    day5.cpp
)

add_executable(day6
    day6.cpp
)

add_executable(day7
    day7.cpp
)

add_executable(day8
    day8.cpp
)

add_executable(day9
    day9.cpp
)

add_executable(day10
    day10.cpp
)
